--- a/index.html
+++ b/index.html
@@ -1,159 +1,172 @@
 ---
 layout: default-ffc
 ---
+<div class="contact">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="intro-header">
+                <div class="container">
+                    <div class="center">
+                        <div class="col-xs-12 text-center abcen1">
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="intro-header">
-            <div class="container">
-              <div class="center">
-            <div class="col-xs-12 text-center abcen1">
-
-                <h2>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h2>
-                <h3>Family Folder Collector</h3>
-
-            </div>
-            <!-- /.container -->
-</div>
-        </div>
-</div>
-    </div>
-</div>
-
-<center>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h2>Family Folder Collector </h2>
-                <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
-            </div>
-        </div>
-    </div>
-</center>
-
-<div class="content-section-a trb-survey-bg">
-    <div class="container">
-        <h2>คืออะไร???</h2>
-        <div class="row">
-            <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
-                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
-            </div>
-            <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                <h2 class="section-heading heading-pink">Family Folder Collector </h2>
-                <p class="lead lead-dark" style="color:#000000;">
-                    โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
-                    สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
-                </p>
-
-                <p>
-                    <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                        <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com" width="150" height="100">
-                    </a>
-                    <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
-            </div>
-        </div>
-    </div>
-    <!-- /.container -->
-</div>
-<div class="content-section-a trb-report-bg">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
-            </div>
-
-            <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                <h2 class="section-heading heading-green">ใครใช้?</h2>
-
-                <p class="lead">
-                    ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
-                </p>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="content-section-b trb-showe-bg">
-    <div class="content-section-b">
-        <div class="container">
-            <div class="center">
-                <div class="row">
-                    <h2>คุณสมบัติ</h2>
-                    <section class="all-features featured text-left">
-                        <div class="col-sm-12 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-
-                            <div class="column colspan-1">
-                              <h4><i class="fa fa-lock" style="font-size:48px"></i> &nbsp; ด้านความปลอดภัย</h4>
-
-                                <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
-                            </div>
-                            <div class="column colspan-1">
-                                <h4><i class="fa fa-street-view" style="font-size:48px"></i> &nbsp;ยืนยันผู้ใช้</h4>
-
-                                <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
-                            </div>
-                            <div class="column colspan-1">
-                              <h4><i class="fa fa-ambulance" style="font-size:48px"></i>&nbsp; การใช้งาน</h4>
-                                <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
-                            </div>
-
-                            <div class="column colspan-1">
-                                <h4><i class="fa fa-map-marker" style="font-size:48px"></i>&nbsp;ระบุตำแหน่ง</h4>
-
-                                <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติได้</p>
-                            </div>
-                            <div class="column colspan-1">
-                                  <h4><i class="fa fa-newspaper-o" style="font-size:48px"></i>&nbsp;รายละเอียดผังญาติ</h4>
-                                <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
-                            </div>
-                            <div class="column colspan-1">
-                              <h4><i class="fa fa-camera" style="font-size:48px"></i>&nbsp;ถ่ายภาพบุคคล</h4>
-
-                                <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
-                            </div>
-                            <div class="column colspan-1">
-                                <h4>  <i class="fa fa-group" style="font-size:48px"></i>&nbsp;สร้างผังเครือญาติ</h4>
-
-                                <p>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ</p>
-                            </div>
-                            <div class="column colspan-1">
-                                <h4> <i class="fa fa-save" style="font-size:48px;"></i>&nbsp;บันทึกข้อมูล</h4>
-
-                                <p>สามารถบันทึกข้อมูลภาวะสุขภาพที่สำคัญในการออกเยี่ยมเพื่อปรับปรุงข้อมูลด้านสุขภาพได้</p>
-                            </div>
-
-                            <div class="column colspan-1">
-                                  <h4><i class="fa fa-search" style="font-size:48px"></i>&nbsp;การค้นหา</h4>
-
-                                <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                            </div>
+                            <h3><b>Family Folder CollectorFFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</b></h3>
+                            <h4>Family Folder Collector</h4>
 
                         </div>
-                    </section>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-<!-- /.container -->
-
-<div class="content-section-b trb-video-bg">
-    <div class="content-section-b">
-        <div class="container">
-            <div class="center">
-                <div class="row white">
-                    <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                        <h2>FFC Video </h2>
-                        <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                        <!-- /.container -->
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <center>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Family Folder Collector </h2>
+                    <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
+                </div>
+            </div>
+        </div>
+    </center>
+
+    <div class="content-section-a trb-survey-bg">
+        <div class="container">
+            <h2>คืออะไร???</h2>
+            <div class="row">
+                <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
+                    <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+                    <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+                </div>
+                <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                    <h2 class="section-heading heading-pink">Family Folder Collector </h2>
+                    <p class="lead lead-dark" style="color:#000000;">
+                        โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
+                        สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
+                    </p>
+
+                    <p>
+                        <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
+                            <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com" width="150" height="100">
+                        </a>
+                        <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
+                </div>
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+    <div class="content-section-a trb-report-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                    <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
+                </div>
+
+                <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
+                    <h2 class="section-heading heading-green">ใครใช้?</h2>
+
+                    <p class="lead">
+                        ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
+                    </p>
 
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="content-section-b trb-showe-bg">
+        <div class="content-section-b">
+            <div class="container">
+                <div class="center">
+                    <div class="row">
+                        <h2>คุณสมบัติ</h2>
+                        <section class="all-features featured text-left">
+                            <div class="col-sm-4">
+                                <div class="grid grid-3 vertical-gutters-large gallery">
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-lock" style="font-size:36px"></i> &nbsp; ด้านความปลอดภัย</h4>
+
+                                        <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
+                                    </div>
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-street-view" style="font-size:36px"></i> &nbsp;ยืนยันผู้ใช้</h4>
+
+                                        <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
+                                    </div>
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-ambulance" style="font-size:36px"></i>&nbsp; การใช้งาน</h4>
+                                        <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="grid grid-3 vertical-gutters-large gallery">
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-map-marker" style="font-size:36px"></i>&nbsp;ระบุตำแหน่ง</h4>
+
+                                        <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติไดสามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดได้</p>
+                                    </div>
+
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-newspaper-o" style="font-size:36px"></i>&nbsp;รายละเอียดผังญาติ</h4>
+                                        <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
+                                    </div>
+
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-camera" style="font-size:36px"></i>&nbsp;ถ่ายภาพบุคคล</h4>
+
+                                        <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="grid grid-3 vertical-gutters-large gallery">
+                                    <div class="column colspan-1">
+                                        <h4><i class="fa fa-search" style="font-size:36px"></i>&nbsp;การค้นหา</h4>
+
+                                        <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                                    </div>
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4> <i class="fa fa-save" style="font-size:36px;"></i>&nbsp;บันทึกข้อมูล</h4>
+                                        <p>สามารถบันทึกข้อมูลภาวะสุขภาพที่สำคัญในการออกเยี่ยมเพื่อปรับปรุงข้อมูลด้านสุขภาพได้</p>
+                                    </div>
+                                    &nbsp;
+                                    <div class="column colspan-1">
+                                        <h4>  <i class="fa fa-group" style="font-size:36px"></i>&nbsp;สร้างผังเครือญาติ</h4>
+
+                                        <p>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <!-- /.container -->
+
+    <div class="content-section-b trb-video-bg">
+        <div class="content-section-b">
+            <div class="container">
+                <div class="center">
+                    <div class="row white">
+                        <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                            <h2>FFC Video </h2>
+                            <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
