--- a/index.html
+++ b/index.html
@@ -7,164 +7,162 @@ layout: default-ffc
             <div class="intro-header">
                 <div class="container">
                     <div class="center">
-                            <h3>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
-                            &nbsp;
-                            <h4>Family Folder Collector</h4>
 
-                        </div>
-                        <!-- /.container -->
-
+                        <h3>FFCบริการถึงหน้าบ้าน เข้าถึงทุกครอบครัว ใส่ใจสุขภาพในชุมชน</h3>
                     </div>
-
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <center>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Family Folder Collector </h2>
-                    <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
-                </div>
-            </div>
-        </div>
-    </center>
-
-    <div class="content-section-a trb-survey-bg">
-        <div class="container">
-            <h2>Family Folder Collector </h2>
-            <div class="row">
-                <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
-                    <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
-                    <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
-                </div>
-                <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                    <h2 class="section-heading heading-pink">คืออะไร? </h2>
-                    <p class="sansserif" style="color:#000000;">
-                        โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
-                        สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
-                    </p>
-
-                    <p>
-                        <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
-                            <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com">
-                        </a>
-                        <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
-                </div>
-            </div>
-        </div>
-        <!-- /.container -->
-    </div>
-    <div class="content-section-a trb-report-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
-                    <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
-                </div>
-
-                <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
-                    <h2 class="section-heading heading-green">ใครใช้?</h2>
-
-                    <p class="sansserif">
-                        ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
-                    </p>
+                    <!-- /.container -->
 
                 </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="content-section-b trb-showe-bg">
-        <div class="content-section-b">
-            <div class="container">
-                <div class="center">
-                    <div class="row">
-                        <h2>คุณสมบัติ</h2>
-                        <section class="all-features featured text-left">
-                            <div class="col-sm-4">
-                                <div class="grid grid-3 vertical-gutters-large gallery">
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-lock" style="font-size:36px"></i> &nbsp; ด้านความปลอดภัย</h4>
-
-                                        <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
-                                    </div>
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-street-view" style="font-size:36px"></i> &nbsp;ยืนยันผู้ใช้</h4>
-
-                                        <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
-                                    </div>
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-ambulance" style="font-size:36px"></i>&nbsp; การใช้งาน</h4>
-                                        <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="grid grid-3 vertical-gutters-large gallery">
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-map-marker" style="font-size:36px"></i>&nbsp;ระบุตำแหน่ง</h4>
-
-                                        <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติไดสามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดได้</p>
-                                    </div>
-
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-newspaper-o" style="font-size:36px"></i>&nbsp;รายละเอียดผังญาติ</h4>
-                                        <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
-                                    </div>
-
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-camera" style="font-size:36px"></i>&nbsp;ถ่ายภาพบุคคล</h4>
-
-                                        <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="grid grid-3 vertical-gutters-large gallery">
-                                    <div class="column colspan-1">
-                                        <h4><i class="fa fa-search" style="font-size:36px"></i>&nbsp;การค้นหา</h4>
-
-                                        <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
-                                    </div>
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4> <i class="fa fa-save" style="font-size:36px;"></i>&nbsp;บันทึกข้อมูล</h4>
-                                        <p>สามารถบันทึกข้อมูลภาวะสุขภาพที่สำคัญในการออกเยี่ยมเพื่อปรับปรุงข้อมูลด้านสุขภาพได้</p>
-                                    </div>
-                                    &nbsp;
-                                    <div class="column colspan-1">
-                                        <h4>  <i class="fa fa-group" style="font-size:36px"></i>&nbsp;สร้างผังเครือญาติ</h4>
-
-                                        <p>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
-                    </div>
-                </div>
 
             </div>
         </div>
     </div>
+</div>
 
+<center>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Family Folder Collector </h2>
+                <h4>โปรแกรมบันทึกข้อมูลสุขภาพครอบครัวแบบพกพา</h4>
+            </div>
+        </div>
+    </div>
+</center>
 
+<div class="content-section-a trb-survey-bg">
+    <div class="container">
+        <h2>Family Folder Collector </h2>
+        <div class="row">
+            <div class="col-sm-6 pull-right wow fadeInRightBig animated animated" style="visibility: visible;">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+                <img class="img-responsive " src="/img/1.png" alt="FFC.com" width="325" height="310">
+            </div>
+            <div class="col-sm-6 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
+                <h2 class="section-heading heading-pink">คืออะไร? </h2>
+                <p class="sansserif" style="color:#000000;">
+                    โปรแกรมบันทึกข้อมูลสุขภาพครอบครัว (Family Folder Collector) หรือเราเรียกสั้นๆว่า FFC โดยโปรแกรมถูกออกแบบให้ใช้งานร่วมกับฐานข้อมูล โปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบล และศูนย์สุขภาพชุมชน JHCISของศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร สำนักงานปลัดกระทรวง
+                    สาธารณสุข เพื่ออำนวยความสะดวกให้เจ้าหน้าที่สาธารณสุข ที่พ.สต.นำไปใช้ เยี่ยมบ้าน คัดกรองโรค สำรวจพิกัดบ้าน สถานที่สำคัญ ในชุมชน ลดปัญหาการกรอกข้อมูลซ้ำซ้อนและส่งเสริมการทำงานเชิงรุกให้มีประสิทธิภาพมากยิ่งขึ้น
+                </p>
+
+                <p>
+                    <a class="" href="https://play.google.com/store/apps/details?id=th.in.ffc" target="_blank" role="button">
+                        <img style="height: 64px;" src="/img/Google-Play.png" alt="FFC.com">
+                    </a>
+                    <!--<a class="btn btn-embossed btn-info" href="#" role="button">Visit Website</a>--></p>
+            </div>
+        </div>
+    </div>
     <!-- /.container -->
+</div>
+<div class="content-section-a trb-report-bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 wow fadeInLeftBig animated animated" style="visibility: visible; animation-name: fadeInLeftBig;">
+                <img class="img-responsive " src="img/all1.png" alt="FFC.com" width="550" height="530">
+            </div>
 
-    <div class="content-section-b trb-video-bg">
-        <div class="content-section-b">
-          <div class="contai ner">
+            <div class="col-sm-6 wow fadeInRightBig animated animated" data-animation-delay="200" style="visibility: visible; animation-name: fadeInRightBig;">
+                <h2 class="section-heading heading-green">ใครใช้?</h2>
+
+                <p class="sansserif">
+                    ผู้ใช้แอพ FFC Plus นี้ สำหรับเจ้าหน้าที่ทางด้านสาธารณะสุขที่ทำงานอยู่ตามสถานีอนามัย โรงพยาบาลส่งเสริมสุขภาพตำบล (รพ.สต.)ที่ใช้งานโปรแกรม JHCIS อยู่เท่านั้น
+                </p>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="content-section-b trb-showe-bg">
+    <div class="content-section-b">
+        <div class="container">
+            <div class="center">
+                <div class="row">
+                    <h2>คุณสมบัติ</h2>
+                    <section class="all-features featured text-left">
+                        <div class="col-sm-4">
+                            <div class="grid grid-3 vertical-gutters-large gallery">
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-lock" style="font-size:36px"></i> &nbsp; ด้านความปลอดภัย</h4>
+
+                                    <p>มีระบบการรักษาความปลอดภัยให้ฐานข้อมูลด้วยการเข้าและถอดรหัสลับก่อนใช้งานฐานข้อมูล เพื่อความปลอดภัยสูงสุดของฐานข้อมูล</p>
+                                </div>
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-street-view" style="font-size:36px"></i> &nbsp;ยืนยันผู้ใช้</h4>
+
+                                    <p>มีระบบการยืนยันผู้ใช้ที่สามารถเข้าถึงฐานข้อมูลได้ เพิ่มความปลอดภัยอีกระดับ</p>
+                                </div>
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-ambulance" style="font-size:36px"></i>&nbsp; การใช้งาน</h4>
+                                    <p>ใช้งานร่วมกับโปรแกรมระบบงานโรงพยาบาลส่งเสริมสุขภาพตำบลและศูนย์สุขภาพชุมชน (JHCIS) ศูนย์เทคโนโลยีสารสนเทศและการสื่อสาร ได้อย่างอัตโนมัติ ด้วยโปรแกรม FFC Autosync 2011 ที่ติดตั้งไว้บนคอมพิวเตอร์แม่ข่าย (Server) </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="grid grid-3 vertical-gutters-large gallery">
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-map-marker" style="font-size:36px"></i>&nbsp;ระบุตำแหน่ง</h4>
+
+                                    <p>สามารถระบุตำแหน่งพิกัดหลังคาเรือนจากระบบ GPS หรือ AGPS อย่างอัตโนมัติไดสามารถเพิ่ม แก้ไข ลบ ค้นหา ตำแหน่งพิกัดได้</p>
+                                </div>
+
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-newspaper-o" style="font-size:36px"></i>&nbsp;รายละเอียดผังญาติ</h4>
+                                    <p>สามารถแสดงรายละเอียดข้อมูลคนในผังเครือญาติ เช่น เพศ วัย อายุ และสภาพการเป็นโรคเรื้อรังได้</p>
+                                </div>
+
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-camera" style="font-size:36px"></i>&nbsp;ถ่ายภาพบุคคล</h4>
+
+                                    <p><span style="line-height: 1.6em;">สามารถถ่ายและบันทึกภาพของบุคคล และนำมาเก็บในฐานข้อมูลของโปรแกรม JHCIS ได้</span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="grid grid-3 vertical-gutters-large gallery">
+                                <div class="column colspan-1">
+                                    <h4><i class="fa fa-search" style="font-size:36px"></i>&nbsp;การค้นหา</h4>
+
+                                    <p>มีระบบค้นหา รหัสวินิจฉัยโรค เพื่อสะดวกในค้นหารหัสโรค หรือ คำหลักของโรคนั้นได้ พร้อมรหัสวินิจฉัยโรคที่มีใช้งานบ่อยๆ</p>
+                                </div>
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4> <i class="fa fa-save" style="font-size:36px;"></i>&nbsp;บันทึกข้อมูล</h4>
+                                    <p>สามารถบันทึกข้อมูลภาวะสุขภาพที่สำคัญในการออกเยี่ยมเพื่อปรับปรุงข้อมูลด้านสุขภาพได้</p>
+                                </div>
+                                &nbsp;
+                                <div class="column colspan-1">
+                                    <h4>  <i class="fa fa-group" style="font-size:36px"></i>&nbsp;สร้างผังเครือญาติ</h4>
+
+                                    <p>สามารถสร้างผังเครือญาติ (Genogram) ในรูปแบบกราฟฟิก โดยมีจุดศูนย์กลางที่เจ้าบ้านได้ ๔ รุ่นอายุคน (หนึ่งรุ่นอายุคนก่อนเจ้าบ้าน สองรุ่นอายุคนหลังเจ้าบ้าน) จากฐานข้อมูลของโปรแกรม JHCIS ได้อย่างอัตโนมัติ</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+<!-- /.container -->
+
+<div class="content-section-b trb-video-bg">
+    <div class="content-section-b">
+        <div class="contai ner">
             <div class="contai ner">
                 <div class="center">
                     <div class="row white">
                         <div class="col-md-12 wow fadeInLeftBig animated animated" data-animation-delay="200" style="visibility: visible;">
-                          <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
+                            <p class="sansserif" style="color:#FFFFFF;">ถ้าอยากรู้จัก FFC เพิ่มเติมสามารถชมวิดิโอด้านล่างได้เลยค่ะ ^_^ </p>
 
                             <iframe width="560" height="415" src="https://www.youtube.com/embed/DJceyu3Bg6c" frameborder="0" allowfullscreen></iframe>
                         </div>
@@ -174,4 +172,30 @@ layout: default-ffc
             </div>
         </div>
     </div>
-  </div>
+</div>
+<div class="content-section-a trb-report-bg">
+    <div class="container">
+        <div class="row">
+          <center>
+          <h2>ติดต่อเรา </h2>
+            <br>&nbsp;</br>
+          </center>
+          <div class="col-md-6 col-sm-3">
+          <center>
+          <a href="https://www.google.co.th/maps/place/%E0%B8%A8%E0%B8%B9%E0%B8%99%E0%B8%A2%E0%B9%8C%E0%B9%80%E0%B8%97%E0%B8%84%E0%B9%82%E0%B8%99%E0%B9%82%E0%B8%A5%E0%B8%A2%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B8%97%E0%B8%A3%E0%B8%AD%E0%B8%99%E0%B8%B4%E0%B8%81%E0%B8%AA%E0%B9%8C%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%84%E0%B8%AD%E0%B8%A1%E0%B8%9E%E0%B8%B4%E0%B8%A7%E0%B9%80%E0%B8%95%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B9%81%E0%B8%AB%E0%B9%88%E0%B8%87%E0%B8%8A%E0%B8%B2%E0%B8%95%E0%B8%B4/@14.0777859,100.5991244,17z/data=!4m5!3m4!1s0x30e27f945ff7f713:0xa05f682498545ab0!8m2!3d14.0777859!4d100.6013131">
+          <img class="img-responsive " src="img/map2.png" alt="FFC.com" width="250" height="200">
+        </a>
+      </center>
+      </div>
+
+            <div class="col-md-6 col-sm-3">
+                <h4>ที่อยู่</h4>
+                <p > ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ <br>National Electronics and Computer Technology Center : NECTEC <br>  112 ถนนพหลโยธิน ตำบลคลองหนึ่ง <br>อำเภอคลองหลวง จังหวัดปทุมธานี 12120 <br>โทรศัพท์ 02-564-6900 </br>
+                </br></br>
+
+                </p>
+
+            </div>
+            </div>
+          </div>
+        </div>
